// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click option 1`] = `
<div class="ghb-dropdown-menu">
  <div class="ghb-dropdown-menu__bar ghb-dropdown-menu__bar--opened">
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title"><div class="ghb-ellipsis">B</div></span></div>
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title"><div class="ghb-ellipsis">B</div></span></div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px;">
      <div class="ghb-overlay" style="z-index: 2013; animation-duration: 0.2s; position: absolute;" name="ghb-fade"></div>
      <div class="ghb-popup ghb-popup--top ghb-dropdown-item__content" style="transition-duration: 0.2s; display: none; z-index: 2014;" name="ghb-popup-slide-top">
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option">
          <div class="ghb-cell__title"><span>A</span></div>
        </div>
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option ghb-dropdown-item__option--active">
          <div class="ghb-cell__title"><span>B</span></div>
          <div class="ghb-cell__value"><i class="ghb-icon ghb-icon-success ghb-dropdown-item__icon">
              <!----></i></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`close-on-click-outside 1`] = `
<div class="ghb-dropdown-menu">
  <div class="ghb-dropdown-menu__bar ghb-dropdown-menu__bar--opened">
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title"><div class="ghb-ellipsis">A</div></span></div>
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title"><div class="ghb-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px;">
      <div class="ghb-popup ghb-popup--top ghb-dropdown-item__content" style="transition-duration: 0.2s; display: none;" name="ghb-popup-slide-top">
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option ghb-dropdown-item__option--active">
          <div class="ghb-cell__title"><span>A</span></div>
          <div class="ghb-cell__value"><i class="ghb-icon ghb-icon-success ghb-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option">
          <div class="ghb-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`destroy one item 1`] = `
<div class="ghb-dropdown-menu">
  <div class="ghb-dropdown-menu__bar">
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title"><div class="ghb-ellipsis">A</div></span></div>
  </div>
  <!---->
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`didn\`t find matched option 1`] = `
<div class="ghb-dropdown-menu">
  <div class="ghb-dropdown-menu__bar">
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title"><div class="ghb-ellipsis"></div></span></div>
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title"><div class="ghb-ellipsis"></div></span></div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`direction up 1`] = `
<div class="ghb-dropdown-menu">
  <div class="ghb-dropdown-menu__bar">
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title ghb-dropdown-menu__title--down"><div class="ghb-ellipsis">A</div></span></div>
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title ghb-dropdown-menu__title--down"><div class="ghb-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--up" style="bottom: 0px; display: none;">
      <!---->
    </div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--up" style="bottom: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`direction up 2`] = `
<div class="ghb-dropdown-menu">
  <div class="ghb-dropdown-menu__bar ghb-dropdown-menu__bar--opened">
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title ghb-dropdown-menu__title--active"><div class="ghb-ellipsis">A</div></span></div>
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title ghb-dropdown-menu__title--down"><div class="ghb-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--up" style="bottom: 1000px;">
      <div class="ghb-popup ghb-popup--bottom ghb-dropdown-item__content" style="transition-duration: 0.2s;" name="ghb-popup-slide-bottom">
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option ghb-dropdown-item__option--active">
          <div class="ghb-cell__title"><span>A</span></div>
          <div class="ghb-cell__value"><i class="ghb-icon ghb-icon-success ghb-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option">
          <div class="ghb-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--up" style="bottom: 1000px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`disable close-on-click-outside 1`] = `
<div class="ghb-dropdown-menu">
  <div class="ghb-dropdown-menu__bar ghb-dropdown-menu__bar--opened">
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title ghb-dropdown-menu__title--active ghb-dropdown-menu__title--down"><div class="ghb-ellipsis">A</div></span></div>
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title"><div class="ghb-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px;">
      <div class="ghb-popup ghb-popup--top ghb-dropdown-item__content" style="transition-duration: 0.2s;" name="ghb-popup-slide-top">
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option ghb-dropdown-item__option--active">
          <div class="ghb-cell__title"><span>A</span></div>
          <div class="ghb-cell__value"><i class="ghb-icon ghb-icon-success ghb-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option">
          <div class="ghb-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`disable dropdown item 1`] = `
<div class="ghb-dropdown-menu">
  <div class="ghb-dropdown-menu__bar">
    <div role="button" tabindex="-1" class="ghb-dropdown-menu__item ghb-dropdown-menu__item--disabled"><span class="ghb-dropdown-menu__title"><div class="ghb-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`render option icon 1`] = `
<div class="ghb-dropdown-menu">
  <div class="ghb-dropdown-menu__bar ghb-dropdown-menu__bar--opened">
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title ghb-dropdown-menu__title--active ghb-dropdown-menu__title--down"><div class="ghb-ellipsis">A</div></span></div>
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title"><div class="ghb-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px;">
      <div class="ghb-popup ghb-popup--top ghb-dropdown-item__content" style="transition-duration: 0.2s;" name="ghb-popup-slide-top">
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option ghb-dropdown-item__option--active"><i class="ghb-icon ghb-icon-success ghb-cell__left-icon">
            <!----></i>
          <div class="ghb-cell__title"><span>A</span></div>
          <div class="ghb-cell__value"><i class="ghb-icon ghb-icon-success ghb-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option"><i class="ghb-icon ghb-icon-success ghb-cell__left-icon">
            <!----></i>
          <div class="ghb-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`show dropdown item 1`] = `
<div class="ghb-dropdown-menu">
  <div class="ghb-dropdown-menu__bar ghb-dropdown-menu__bar--opened">
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title ghb-dropdown-menu__title--active ghb-dropdown-menu__title--down"><div class="ghb-ellipsis">A</div></span></div>
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title"><div class="ghb-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px;">
      <div class="ghb-popup ghb-popup--top ghb-dropdown-item__content" style="transition-duration: 0.2s;" name="ghb-popup-slide-top">
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option ghb-dropdown-item__option--active">
          <div class="ghb-cell__title"><span>A</span></div>
          <div class="ghb-cell__value"><i class="ghb-icon ghb-icon-success ghb-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option">
          <div class="ghb-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`show dropdown item 2`] = `
<div class="ghb-dropdown-menu">
  <div class="ghb-dropdown-menu__bar ghb-dropdown-menu__bar--opened">
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title"><div class="ghb-ellipsis">A</div></span></div>
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title ghb-dropdown-menu__title--active ghb-dropdown-menu__title--down"><div class="ghb-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px;">
      <div class="ghb-popup ghb-popup--top ghb-dropdown-item__content" style="transition-duration: 0s; display: none;" name="ghb-popup-slide-top">
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option ghb-dropdown-item__option--active">
          <div class="ghb-cell__title"><span>A</span></div>
          <div class="ghb-cell__value"><i class="ghb-icon ghb-icon-success ghb-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option">
          <div class="ghb-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px;">
      <div class="ghb-popup ghb-popup--top ghb-dropdown-item__content" style="transition-duration: 0.2s;" name="ghb-popup-slide-top">
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option ghb-dropdown-item__option--active">
          <div class="ghb-cell__title"><span>A</span></div>
          <div class="ghb-cell__value"><i class="ghb-icon ghb-icon-success ghb-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option">
          <div class="ghb-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`show dropdown item 3`] = `
<div class="ghb-dropdown-menu">
  <div class="ghb-dropdown-menu__bar ghb-dropdown-menu__bar--opened">
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title"><div class="ghb-ellipsis">A</div></span></div>
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title"><div class="ghb-ellipsis">A</div></span></div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px;">
      <div class="ghb-popup ghb-popup--top ghb-dropdown-item__content" style="transition-duration: 0s; display: none;" name="ghb-popup-slide-top">
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option ghb-dropdown-item__option--active">
          <div class="ghb-cell__title"><span>A</span></div>
          <div class="ghb-cell__value"><i class="ghb-icon ghb-icon-success ghb-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option">
          <div class="ghb-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px;">
      <div class="ghb-popup ghb-popup--top ghb-dropdown-item__content" style="transition-duration: 0.2s; display: none;" name="ghb-popup-slide-top">
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option ghb-dropdown-item__option--active">
          <div class="ghb-cell__title"><span>A</span></div>
          <div class="ghb-cell__value"><i class="ghb-icon ghb-icon-success ghb-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="ghb-cell ghb-cell--clickable ghb-dropdown-item__option">
          <div class="ghb-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`title prop 1`] = `
<div class="ghb-dropdown-menu">
  <div class="ghb-dropdown-menu__bar">
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title"><div class="ghb-ellipsis">Title</div></span></div>
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title"><div class="ghb-ellipsis">Title</div></span></div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`title slot 1`] = `
<div class="ghb-dropdown-menu">
  <div class="ghb-dropdown-menu__bar">
    <div role="button" tabindex="0" class="ghb-dropdown-menu__item"><span class="ghb-dropdown-menu__title"><div class="ghb-ellipsis">
            Custom Title
          </div></span></div>
  </div>
  <div>
    <div class="ghb-dropdown-item ghb-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;
